[tool.poetry]
name = "aula-09"
version = "0.1.0"
description = ""
authors = ["natanschons"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
